<resources>
    <string name="app_name">HousePlant Care</string>
    <string name="info_message">"Name: %s\n\nFamily: %s\n\nGenus: %s\n\nCara Merawat: %s\n\n"</string>
    <string name="take_photo">Take Image</string>
    <string name="choose_image">Choose Image</string>
    <string name="loading">Loading…</string>
    <string name="register">REGISTER</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="regist">Register</string>
    <string name="back_login">Back to Login</string>
    <string name="user_login">USER LOGIN</string>
    <string name="login">Login</string>
    <string name="create_account">Create Account</string>
</resources>