<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginLeft="30dp"
    android:layout_marginRight="30dp"
    android:orientation="vertical"
    android:gravity="center"
    tools:context=".ui.RegisterActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/register"
        android:layout_margin="30dp"
        android:textStyle="bold"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/txID"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:hint="@string/username"
        android:inputType="textPersonName"
        android:visibility="gone"
        tools:ignore="Autofill" />

    <EditText
        android:id="@+id/txUsernameReg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:hint="@string/username"
        android:inputType="textPersonName"
        tools:ignore="Autofill" />

    <EditText
        android:id="@+id/txPasswordReg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:hint="@string/password"
        android:inputType="textPassword"
        tools:ignore="Autofill" />

    <EditText
        android:id="@+id/txConPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:hint="@string/confirm_password"
        android:inputType="textPassword"
        tools:ignore="Autofill" />

    <Button
        android:id="@+id/btnRegister"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/regist"
        android:layout_marginBottom="10dp"
        style="@style/Widget.AppCompat.Button.Colored" />

    <TextView
        android:id="@+id/tvRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/back_login"
        android:layout_marginBottom="30dp"/>

</LinearLayout>