<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/flower_background"
    tools:context=".ui.InputActivity"
    android:gravity="center_horizontal">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center"
        android:layout_marginTop="70dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/midnight_drive"
            android:text="@string/app_name"
            android:textSize="45sp"
            android:layout_marginBottom="50dp"
            android:textColor="@color/colorPrimary" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center_horizontal"
        >

        <Button
            android:text="@string/take_photo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:background="@drawable/radius_background"
            android:onClick="takeImage"
            android:textColor="@color/black"
            tools:ignore="UsingOnClickInXml" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:background="@drawable/radius_background"
            android:onClick="chooseImage"
            android:text="@string/choose_image"
            android:textColor="@color/black"
            tools:ignore="UsingOnClickInXml" />

    </LinearLayout>

</LinearLayout>